--- a/nsmbwii/index.html
+++ b/nsmbwii/index.html
@@ -17,7 +17,7 @@ body {
          font-family: seurat-pro
       }
 		</style>
-		<title>Spooky Adventure</title>
+		<title>NSMBWii Modding Projects</title>
 		<link rel="stylesheet" href="../css/nsmbwii.css">
 		<link rel="icon" type="image/png" href="../nsmbwii/img/Rainbros.png">
 	</head>
@@ -29,12 +29,8 @@ body {
 				<a href="../spooky">
 <img src="../nsmbwii/img/Save File Spooky Adventure.png" alt="Spooky Adventure" style="width:1400px;height:250px;">
 </a>
-				<a href="../nsmbwii/nodata">
-<img src="../nsmbwii/img/Save File Blank Num2.png" alt="Blank Save File" style="width:1400px;height:250px;">
-</a>
-				<a href="../nsmbwii/nodata">
-<img src="../nsmbwii/img/Save File Blank Num3.png" alt="Blank Save File" style="width:1400px;height:250px;">
-</a>
+				<img src="../nsmbwii/img/Save File Blank Num2.png">
+				<img src="../nsmbwii/img/Save File Blank Num3.png">
 			</center>
 		<div style="font-family:seurat-pro; text-align: center; margin-left: auto; margin-right: auto; margin-bottom: 0px;">
 			(c) 2022 - MandyIGuess<br> <b>NEW Super Mario Bros. Wii</b>, as well as characters such as Mario, Luigi, Toad, and any others, are <em>fully</em> owned by NINTENDO. I do not have any ownership (full or partial), of said characters.
