--- a/nsmbwii/index.html
+++ b/nsmbwii/index.html
@@ -16,6 +16,9 @@ body {
 	p {
          font-family: seurat-pro
       }
+	h1 {
+  	font-size: 40px;
+	}
 		</style>
 		<title>NSMBWii Modding Projects</title>
 		<link rel="stylesheet" href="../css/nsmbwii.css">
@@ -23,8 +26,7 @@ body {
 	</head>
 	<body>
 			<center>
-				<h1>What adventure will you go on today?</h1>
-				<br>
+				<h1 style=">What adventure will you go on today?</h1>
 				<br>
 				<a href="../spooky">
 <img src="../nsmbwii/img/Save File Spooky Adventure.png" alt="Spooky Adventure" style="width:1400px;height:250px;">
@@ -32,7 +34,7 @@ body {
 				<img src="../nsmbwii/img/Save File Blank Num2.png">
 				<img src="../nsmbwii/img/Save File Blank Num3.png">
 			</center>
-		<div style="font-family:seurat-pro; text-align: center; margin-left: auto; margin-right: auto; margin-bottom: 0px;">
+		<div style="font-family:seurat-pro; text-align: center; margin-left: auto; margin-right: auto; margin-bottom: 5px;">
 			(c) 2022 - MandyIGuess<br> <b>NEW Super Mario Bros. Wii</b>, as well as characters such as Mario, Luigi, Toad, and any others, are <em>fully</em> owned by NINTENDO. I do not have any ownership (full or partial), of said characters.
 		</div>
 	</body>
