--- a/nsmbwii/index.html
+++ b/nsmbwii/index.html
@@ -26,7 +26,7 @@ body {
 	</head>
 	<body>
 			<center>
-				<h1 style=">What adventure will you go on today?</h1>
+				<h1>What adventure will you go on today?</h1>
 				<br>
 				<a href="../spooky">
 <img src="../nsmbwii/img/Save File Spooky Adventure.png" alt="Spooky Adventure" style="width:1400px;height:250px;">
