--- a/404.html
+++ b/404.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>404 ERROR</title>
+		<style>
+			@font-face { font-family: corbel; src: url('CORBEL.TTF'); }
+			@font-face { font-family: ebrima; src: url('ebrima.ttf'); } 
+			h1 {
+         font-family: corbel
+      }
+			p {
+         font-family: ebrima
+      }
+		</style>
+		<title>404 Page-Not-Found</title>
 		<link rel="stylesheet" href="../css/404notfound.css">
 	</head>
 	<body>
 		<center>
-			<h1 style="color:#550000">ERROR-- 404 'Page Not Found'</h1>
-			<p>Sorry, couldn't find that. <br> The portion of this site (<em>mandyiguess.github.io</em>) that you've looked for could not be found. Try retyping the URL, or ensure it actually exists. <br><br> <a href="mandyiguess.github.io">Return Home</a> <br> <a href="https://www.google.com">Return to the Start</a></p>
+			<h1 style="color:#550000">An error occured:<br>404 'Page Not Found'</h1>
+			<p>Sorry, couldn't find that. <br> The portion of this site (<em>mandyiguess.github.io</em>) that you've looked for could not be found. Try retyping the URL, or ensure it actually exists. <br><br> <a href="../">Return Home</a></p>
 		</center>
 	</body>
 </html>
