--- a/404.html
+++ b/404.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<style>
+			body {
+  			background-image: url('../img/the x.png');
+			}
 			@font-face { font-family: corbel; src: url('CORBEL.TTF'); }
 			@font-face { font-family: ebrima; src: url('ebrima.ttf'); } 
 			h1 {
