--- a/404.html
+++ b/404.html
@@ -12,6 +12,7 @@
       }
 			body {
   			background-image: url('../img/the x.png');
+			transform: rotate(90deg);
 			}
 		</style>
 		<title>404 Page-Not-Found</title>
