--- a/nsmbwii/index.html
+++ b/nsmbwii/index.html
@@ -2,23 +2,28 @@
 <html>
 	<head>
 		<style>
-body {
-  background-image: url('../nsmbwii/img/4x4-DiamondsNSMBWii.png');
-}
+			body {
+  			background-image: url('../nsmbwii/img/4x4-DiamondsNSMBWii.png');
+			}
       @font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); } 
       @font-face { font-family: seurat-pro; src: url('seurat-pro.otf'); } 
-      	h1 {
-         font-family: nsmbu-font
+      div.title {
+				  font-size: 72px;
+				  font-family: nsmbu-font, seurat-pro;
+			}
+			h1 {
+        font-family: nsmbu-font
       }
-	h2 {
-         font-family: seurat-pro
+			h2 {
+        font-family: seurat-pro
       }
-	p {
-         font-family: seurat-pro
+			p {
+        font-family: seurat-pro
       }
-	h1 {
-  	font-size: 40px;
-	}
+			h1 {
+  			font-size: 40px;
+			}
+			
 		</style>
 		<title>NSMBWii Modding Projects</title>
 		<link rel="stylesheet" href="../css/nsmbwii.css">
@@ -26,16 +31,16 @@ body {
 	</head>
 	<body>
 			<center>
-				<h1>What adventure will you go on today?</h1>
+				<div class="title">What adventure will you go on today?</div>
 				<br>
 				<a href="../spooky">
-<img src="../nsmbwii/img/Save File Spooky Adventure.png" alt="Spooky Adventure" style="width:1400px;height:250px;">
+<img src="../nsmbwii/img/FileSlot1.png" alt="Spooky Adventure" style="width:1225px;height:175px;">
 </a>
-				<img src="../nsmbwii/img/Save File Blank Num2.png">
-				<img src="../nsmbwii/img/Save File Blank Num3.png">
+				<img src="../nsmbwii/img/NoFileSlot2.png">
+				<img src="../nsmbwii/img/NoFileSlot3.png">
 			</center>
 		<div style="font-family:seurat-pro; text-align: center; margin-left: auto; margin-right: auto; margin-bottom: 5px;">
-			(c) 2022 - MandyIGuess<br> <b>NEW Super Mario Bros. Wii</b>, as well as characters such as Mario, Luigi, Toad, and any others, are <em>fully</em> owned by NINTENDO. I do not have any ownership (full or partial), of said characters.
+			(c) 2022 - MandyIGuess<br><b>NEW Super Mario Bros. Wii</b>, as well as characters such as Mario, Luigi, Toad, and any others, are <em>fully</em> owned by NINTENDO. I do not have any ownership (full or partial), of said characters.
 		</div>
 	</body>
 </html>
