--- a/spooky/externals/youtubemainchannel.html
+++ b/spooky/externals/youtubemainchannel.html
@@ -1,2 +1,2 @@
-you should have redirected. if not, something (clearly) went wrong.
+Now redirecting you, if you do not redirect, here's a <a href="https://discord.gg/af4TBAuZBr">direct link</a>.
 <meta http-equiv="Refresh" content="0; url='https://www.youtube.com/channel/UC7la_QJqCi5YIMLQUG2Kzpw'" />
