--- a/spooky/externals/youtubemandyig.html
+++ b/spooky/externals/youtubemandyig.html
@@ -1,2 +1,2 @@
-you should have redirected. if not, something (clearly) went wrong.
+Now redirecting you, if you do not redirect, here's a <a href="https://www.youtube.com/channel/UC7cYDNWL3e4xXdTt88ok9vQ">direct link</a>.
 <meta http-equiv="Refresh" content="0; url='https://www.youtube.com/channel/UC7cYDNWL3e4xXdTt88ok9vQ'" />
