--- a/spooky/externals/youtubemainchannel.html
+++ b/spooky/externals/youtubemainchannel.html
@@ -1,2 +1,2 @@
-Now redirecting you, if you do not redirect, here's a <a href="https://discord.gg/af4TBAuZBr">direct link</a>.
+Now redirecting you, if you do not redirect, here's a <a href="https://www.youtube.com/channel/UC7la_QJqCi5YIMLQUG2Kzpw">direct link</a>.
 <meta http-equiv="Refresh" content="0; url='https://www.youtube.com/channel/UC7la_QJqCi5YIMLQUG2Kzpw'" />
