--- a/misc/fonttests.html
+++ b/misc/fonttests.html
@@ -10,46 +10,49 @@
       @font-face { font-family: ebrimabd; src: url('ebrimabd.ttf'); }
       @font-face { font-family: seurat-pro; src: url('seurat-pro.otf'); }
       @font-face { font-family: vgasys; src: url('vgasys.fon'); }
-      h1 {
+      p.font1 {
          font-family: nsmbu-font
       }
-      h2 {
+      p.font2 {
          font-family: corbel
       }
-      h3 {
+      p.font3 {
          font-family: coure
       }
-      h4 {
+      p.font4 {
          font-family: dosapp
       }
-      h5 {
+      p.font5 {
          font-family: ebrima
       }
-      h6 {
+      p.font6 {
          font-family: ebrimabd
       }
-      p {
+      p.font7 {
          font-family: seurat-pro
+      }
+      p.font8 {
+         font-family: vgasys
       }
     </style>
     <title>Font Testing</title>
     <link rel="stylesheet" href="../css/fontviewer.css">
   </head>
   <body>
-    <h1>Testing fonts on the site. (NSMBU Font)</h1>
+    <p class="font1">Testing fonts on the site. (NSMBU Font)</p>
     <br>
-    <h2>It's as simple as that. (Corbel)</h2>
+    <p class="font2">It's as simple as that. (Corbel)</p>
     <br>
-    <h3>Not sure what to say here, just making filler text tabs I guess. (Coure)</h3>
+    <p class="font3">Not sure what to say here, just making filler text tabs I guess. (Coure)</p>
     <br>
-    <h4>By the way, the words in parenthesis is the name of the font being used. (DOSAPP)</h4>
+    <p class="font4">By the way, the words in parenthesis is the name of the font being used. (DOSAPP)</p>
     <br>
-    <h5>This text will be getting smaller and smaller, as I use the remaining HTML text tags. (Ebrima)</h5>
+    <p class="font5">This page used to use tags H1 - H6, but now it uses P tags with classes. (Ebrima)</p>
     <br>
-    <h6>This one is a bold version of the above font, just thought I'd mention that. (Ebrima Bold)</h6>
+    <p class="font6">This one is a bold version of the above font, just thought I'd mention that. (Ebrima Bold)</p>
     <br>
-    <p>Oh, little fun fact. There's a font that I didn't use here, Comic-Sans. It sucks and doesn't get to be here. (Seurat-Pro)</p>
+    <p class="font7">Oh, little fun fact. There's a font that I didn't use here, Comic-Sans. It sucks and doesn't get to be here. (Seurat-Pro)</p>
     <br>
-    <p><SPAN STYLE="font-family:'vgasys'">And we finish off with an span tag, since I ran out of other tags to do it with. (VGASYS)</SPAN></p>
+    <p class="font8">This used to be a span tag. (VGASYS)</p>
   </body>
 </html>
