--- a/index.html
+++ b/index.html
@@ -3,19 +3,17 @@
 	<head>
 		<style>
       	@font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); } 
-	@font-face { font-family: comic; src: url('comic.ttf'); } 
-      	h1 {
-         font-family: nsmbu-font
-      }
-	p {
-         font-family: comic
-      }
-	a {
-         font-family: nsmbu-font
-      }
-	h2 {
-         font-family: nsmbu-font
-      }
+				@font-face { font-family: corbel; src: url('CORBEL.TTF'); }
+				@font-face { font-family: ebrima; src: url('ebrima.ttf'); } 
+				h1 {
+         font-family: corbel
+      	}
+				p {
+         font-family: ebrima
+      	}
+      	h2 {
+         font-family: corbel
+      	}
 		</style>
 		<title>MandyIGuess' Website</title>
 		<link rel="stylesheet" href="../css/main.css">
@@ -39,4 +37,6 @@
 			<br>
 			<h1><a href="../junkdrawer">My Junk Drawer</a></h1>
 			<p>This is my 'junk drawer', a collection of random crap and other miscellaneous things I don't want, and I <em>hope</em> you don't want either. What will mostly be here is my old NSMBW modding assets, like my 'remakes' of classic Mario games, and other levels I will never get to finishing. Feel free to sift through it, and take what you want I guess...</p>
-		
+		</center>
+	</body>
+</html>
