--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       	h2 {
          font-family: corbel
       	}
+				a.nsmbwii {
+         font-family: nsmbu-font
+      	}
 		</style>
 		<title>MandyIGuess' Website</title>
 		<link rel="stylesheet" href="../css/main.css">
@@ -30,7 +33,7 @@
 			<br>
 			<h1>My Projects</h1>
 			<h2>Modding</h2>
-			<a href="../nsmbwii">NEW Super Mario Bros. Wii Modding Projects</a>
+			<a class="nsmbwii" href="../nsmbwii">NEW Super Mario Bros. Wii Modding Projects</a>
 			<br>
 			<br>
 			<br>
