--- a/nsmbwii/index.html
+++ b/nsmbwii/index.html
@@ -8,8 +8,10 @@
       @font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); } 
       @font-face { font-family: seurat-pro; src: url('seurat-pro.otf'); } 
       div.title {
-				  font-size: 72px;
-				  font-family: nsmbu-font, seurat-pro;
+				color: #ffffff;
+				font-size: 72px;
+				font-family: nsmbu-font, seurat-pro;
+				text-shadow: 5px 5px 10px #000000;
 			}
 			h1 {
         font-family: nsmbu-font
@@ -20,9 +22,6 @@
 			p {
         font-family: seurat-pro
       }
-			h1 {
-  			font-size: 40px;
-			}
 			
 		</style>
 		<title>NSMBWii Modding Projects</title>
