--- a/junkdrawer/thispageisugly.html
+++ b/junkdrawer/thispageisugly.html
@@ -4,12 +4,12 @@
     <title>ew</title>
     <style>
 			body {
-			transform: rotate(90deg);
+			transform: rotate(34deg);
 			}
     </style>
   </head>
   <body>
-    <h1>This page is ugly af. It's true, it looks bad. Sorry bout that.</h1>
+    <h1>This page is ugly. It's true, it looks bad. Sorry bout that.</h1>
     <br>
     <br>
     <br>
