--- a/junkdrawer/thispageisugly.html
+++ b/junkdrawer/thispageisugly.html
@@ -9,13 +9,23 @@
     </style>
   </head>
   <body>
-	  <br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-    <h1>This page is ugly. It's true, it looks bad. Sorry bout that.</h1>
-    <p>oh wait im not sorry lmao</p>
+		<center>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+  <h1>This page is ugly. It's true, it looks bad. Sorry bout that.</h1>
+  <p>oh wait im not sorry lmao</p>
+		</center>
   </body>
 </html>
