--- a/junkdrawer/index.html
+++ b/junkdrawer/index.html
@@ -3,16 +3,18 @@
 	<head>
 		<style>
       	@font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); } 
-	      @font-face { font-family: comic; src: url('comic.ttf'); } 
-      	h1 {
+	@font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); } 
+	@font-face { font-family: corbel; src: url('CORBEL.TTF'); }
+	@font-face { font-family: ebrima; src: url('ebrima.ttf'); } 
+				h1 {
          font-family: nsmbu-font
-      }
-        h2 {
+      	}
+				p {
+         font-family: ebrima
+      	}
+      	h2 {
          font-family: nsmbu-font
-      }
-	p {
-         font-family: comic
-      }
+      	}
 		</style>
 		<title>Mandy's Junk Drawer</title>
 		<link rel="stylesheet" href="../css/main.css">
