--- a/about.html
+++ b/about.html
@@ -14,13 +14,10 @@
       }
       div.openingInfo {
         width: 600px;
-        padding-right: 20px;
-        padding-left: 20px;
-        padding-top: 20px;
-        padding-bottom: 20px;
         text-align: center;
         border: 5px double red;
         background-color: #cd0000;
+        font-family: ebrima;
       }
     </style>
     <title>About | Mandy's Website</title>
