--- a/aboutme.html
+++ b/aboutme.html
@@ -2,24 +2,28 @@
 <html>
 	<head>
 		<style>
-      	@font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); } 
-	      @font-face { font-family: comic; src: url('comic.ttf'); } 
+      	@font-face { font-family: corbel; src: url('CORBEL.TTF'); } 
+	      @font-face { font-family: ebrima; src: url('ebrima.ttf'); } 
       	h1 {
-         font-family: nsmbu-font
+         font-family: corbel
       }
         h2 {
-         font-family: nsmbu-font
+         font-family: corbel
       }
 	p {
-         font-family: comic
+         font-family: ebrima
       }
 		</style>
-		<title>About Me</title>
+		<title>About Me | Mandy's Website</title>
 		<link rel="stylesheet" href="../css/main.css">
 	</head>
 	<body>
 		<center>
             <h1>About Me!</h1>
+						<br>
             <h2 style="color:#ff0000;">Quick Info</h2>
             <p><b>Age:</b> 14yrs old<br><b>Residential Country:</b> United States of America</p>
             <p>Currently a WIP</p>
+		</center>
+	</body>
+</html>
