--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         font-size: 40px;
       }
       div.openingInfo {
-        width: 600px;
+        width: 1200px;
         text-align: center;
         border: 5px double red;
         background-color: #cd0000;
@@ -26,8 +26,8 @@
   <body>
     <center>
       <p class="title">About this Website</p>
-      <br>
-      <div class="openingInfo"><p class="openingInfoTitle">General Info</p><br>This website is a place for me to showcase my stuff, throw my stuff (only what I <em><i>don't</i></em> want), and do other things with.<br>Also I'm trying to learn more about HTML and web design</div>
+      <p class="openingInfoTitle">General Info</p>
+      <div class="openingInfo">This website is a place for me to showcase my stuff, throw my stuff (only what I <em><i>don't</i></em> want), and do other things with.<br>Also I'm trying to learn more about HTML and web design</div>
     </center>
   </body>
 </html>
