--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
       }
       div.openingInfo {
         width: 1200px;
+        height: 850px;
         text-align: center;
         border: 5px double red;
         background-color: #cd0000;
@@ -26,7 +27,7 @@
   <body>
     <center>
       <p class="title">About this Website</p>
-      <p class="openingInfoTitle">General Info</p>
+      <p class="openingInfoTitle"><b>General Info</b></p>
       <div class="openingInfo">This website is a place for me to showcase my stuff, throw my stuff (only what I <em><i>don't</i></em> want), and do other things with.<br>Also I'm trying to learn more about HTML and web design</div>
     </center>
   </body>
