--- a/spooky/support.html
+++ b/spooky/support.html
@@ -9,6 +9,8 @@
         background-position: center;
         font-family: nsmbu-font;
         font-size: 48px;
+				width: 100%;
+				height: 750px;
       }
       body {
         background-image: url('../spooky/img/4x4-Diamonds.png');
@@ -24,8 +26,10 @@
 		<link rel="icon" type="image/png" href="../spooky/favicon.png">
   </head>
   <body>
+		<center>
     <div class="header"><b>Spooky Adventure Support</b></div>
     <br>
     <p>stuff on the body itself, out of the DIV</p>
+		</center>
   </body>
 </html>
