--- a/spooky/support.html
+++ b/spooky/support.html
@@ -9,8 +9,9 @@
         background-position: center;
         font-family: nsmbu-font;
         font-size: 48px;
-				width: 100%;
-				height: 750px;
+	width: 100%;
+	height: 750px;
+	margin: 30;
       }
       body {
         background-image: url('../spooky/img/4x4-Diamonds.png');
