--- a/misc/how-to-get-girls.html
+++ b/misc/how-to-get-girls.html
@@ -18,7 +18,7 @@
       }
 			div.title-window {
         font-family: ebrima;
-        font-color: white;
+        color: white;
       }
 				
 		</style>
