--- a/misc/how-to-get-girls.html
+++ b/misc/how-to-get-girls.html
@@ -27,7 +27,7 @@
 	</head>
 	<body>
 		<center>
-      <div class="title-window"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><img src="../img/load-gag-empty.png"><br>Now loading content.<br>Please do not disconnect the page.</div>
+      <div class="title-window"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><img src="../img/load-gag-empty.png"><img src="../img/load-gag-green-fucker.png"><br><br><br><br>Now loading content.<br>Please do not disconnect the page.</div>
     </center>
   </body>
 </html>
