--- a/misc/how-to-get-girls.html
+++ b/misc/how-to-get-girls.html
@@ -20,16 +20,13 @@
         font-family: ebrima;
         color: white;
       }
-			img.green {
-				left: 20px;
-			}
 		</style>
 		<title>How to Get Bitches</title>
 		<link rel="stylesheet" href="../css/main.css">
 	</head>
 	<body>
 		<center>
-      <div class="title-window"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><img src="../img/load-gag-empty.png"><img class="green" src="../img/load-gag-green-fucker.png"><br><br><br><br>Now loading content.<br>Please do not close the page during loading.</div>
+      <div class="title-window"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><img src="../img/load-gag-empty.png"><img src="../img/load-gag-green-fucker.png" style="left: 20px;"><br><br><br><br>Now loading content.<br>Please do not close the page during loading.</div>
     </center>
   </body>
 </html>
