--- a/misc/how-to-get-girls.html
+++ b/misc/how-to-get-girls.html
@@ -26,7 +26,9 @@
 	</head>
 	<body>
 		<center>
-      <div class="title-window"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><img src="../img/load-gag-empty.png"><img src="../img/load-gag-green-fucker.png" style="left: 20px;"><br><br><br><br>Now loading content.<br>Please do not close the page during loading.</div>
+      <div class="title-window"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><img src="../img/load-anim.gif">
+	      <br><br><br><br>Now loading content.<br>Please do not close the page during loading.
+			</div>
     </center>
   </body>
 </html>
