--- a/misc/how-to-get-girls.html
+++ b/misc/how-to-get-girls.html
@@ -18,7 +18,7 @@
       }
 			div.title-window {
         font-family: ebrima;
-        color: white;
+        color: gray;
       }
 		</style>
 		<title>How to Get Bitches</title>
@@ -27,7 +27,7 @@
 	<body>
 		<center>
       <div class="title-window"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><img src="../img/load-anim.gif">
-	      <br><br><br><br>Now loading content.<br>Please do not close the page during loading.
+	      <br><br>Now loading content.<br>Please do not close the page during loading.
 			</div>
     </center>
   </body>
