--- a/misc/how-to-get-girls.html
+++ b/misc/how-to-get-girls.html
@@ -26,7 +26,7 @@
 	</head>
 	<body>
 		<center>
-      <div class="title-window"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><img src="../img/load-anim.gif">
+      <div class="title-window"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><img src="../img/load-anim.gif">
 	      <br><br>Now loading content.<br>Please do not close the page during loading.
 			</div>
     </center>
