--- a/misc/how-to-get-girls.html
+++ b/misc/how-to-get-girls.html
@@ -21,6 +21,11 @@
         color: gray;
       }
 		</style>
+	  <meta content="How to Get Girls -- MandyIGuess' Website" property="og:title" />
+		<meta content="Ever want to get a girlfriend? This page tells you exactly how to, sporting a bright-colorful" property="og:description" />
+		<meta content="https://mandyiguess.github.io/spooky" property="og:url" />
+		<!--<meta content="https://embed.com/embedimage.png" property="og:image" />-->
+		<meta content="#dd8fda" data-react-helmet="true" name="theme-color" />
 		<title>How to Get Bitches</title>
 		<link rel="stylesheet" href="../css/main.css">
 	</head>
@@ -32,3 +37,4 @@
     </center>
   </body>
 </html>
+<!--if you're reading this, fuck you.-->
