--- a/misc/how-to-get-girls.html
+++ b/misc/how-to-get-girls.html
@@ -19,6 +19,9 @@
 			div.title-window {
         font-family: ebrima;
         color: gray;
+				-webkit-user-select: none; /* Safari */
+  			-ms-user-select: none; /* IE 10 and IE 11 */
+  			user-select: none; /* Standard syntax */
       }
 		</style>
 	  <meta content="How to Get Girls -- MandyIGuess' Website" property="og:title" />
