--- a/misc/how-to-get-girls.html
+++ b/misc/how-to-get-girls.html
@@ -25,7 +25,7 @@
       }
 		</style>
 	  <meta content="How to Get Girls -- MandyIGuess' Website" property="og:title" />
-		<meta content="Ever want to get a girlfriend? This page tells you exactly how to, sporting a bright-colorful" property="og:description" />
+		<meta content="Ever want to get a girlfriend? This page tells you exactly how to, sporting a bright-colorful palette of colors to inspire you and let you make the best of this page!" property="og:description" />
 		<meta content="https://mandyiguess.github.io/spooky" property="og:url" />
 		<!--<meta content="https://embed.com/embedimage.png" property="og:image" />-->
 		<meta content="#dd8fda" data-react-helmet="true" name="theme-color" />
