--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -3,12 +3,21 @@
   <head>
     <style>
       @font-face { font-family: mojangles; src: url('Mojangles.ttf'); }
+      body {
+        background-image: url('../minecraft/img/dirtBG.png');
+      }
+      div.titlebar {
+        background-image: url('../minecraft/img/button35px.png');
+        font-family: mojangles;
+        color: white;
+        text-shadow: 7px 5px #000000;
+      }
     </style>
     <title>Mandy's Minecraft Modding</title>
   </head>
   <body>
     <center>
-      placeholder~~
+      <div class="titlebar">Minecraft Modding Projects</div>
     </center>
   </body>
 </html>
