--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -7,6 +7,8 @@
         background-image: url('../minecraft/img/dirtBG.png');
       }
       div.titlebar {
+        width: 400px;
+        height: 70px;
         background-image: url('../minecraft/img/button35px.png');
         font-family: mojangles;
         color: white;
