--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -10,6 +10,9 @@
         width: 400px;
         height: 70px;
         background-image: url('../minecraft/img/button35px.png');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
         font-family: mojangles;
         color: white;
         text-shadow: 7px 5px #000000;
