--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -12,7 +12,7 @@
         background-image: url('../minecraft/img/button35px.png');
         background-repeat: no-repeat;
         background-attachment: fixed;
-        background-size: cover;
+        background-size: 100% 100%;
         font-family: mojangles;
         color: white;
         text-shadow: 7px 5px #000000;
