--- a/misc/how-to-get-girls.html
+++ b/misc/how-to-get-girls.html
@@ -29,7 +29,7 @@
 		<meta content="https://mandyiguess.github.io/spooky" property="og:url" />
 		<!--<meta content="https://embed.com/embedimage.png" property="og:image" />-->
 		<meta content="#dd8fda" data-react-helmet="true" name="theme-color" />
-		<title>How to Get Bitches</title>
+		<title>How to Get Girls™</title>
 		<link rel="stylesheet" href="../css/main.css">
 	</head>
 	<body>
