--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 			<p>Hi, I'm MandyIGuess! You can call me Mandy for short though.<br>I'm a 14yrs old <em>male</em> living in the USA! My gender pronouns are He/Him/His.<br>My timezone is UTC-4 (better known as "the time that NYC uses"), and I'm usually active from 3PM to 12AM on week days, and from 8AM to 2AM on weekends!<br>If you want to find out more about me, go <a href="aboutme">here</a>!</p>
 			<br>
 			<br>
+			<h1>Explore this Website</h1>
+			<a href="about.html">About this Website</a>
+			<br>
+			<br>
 			<h1>My Projects</h1>
 			<h2>Modding</h2>
 			<a class="nsmbwii" href="../nsmbwii">NEW Super Mario Bros. Wii Modding Projects</a>
