--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 				a.nsmbwii {
          font-family: nsmbu-font
       	}
+				div.inTheWorksNotice {
+					width: 1200px;
+        	height: 24px;
+        	text-align: center;
+        	border: 5px double red;
+        	background-color: #ff0000;
+        	font-family: ebrima;
+				}
 		</style>
 		<title>MandyIGuess' Website</title>
 		<link rel="stylesheet" href="../css/main.css">
@@ -26,6 +34,7 @@
 			<h1>MandyIGuess' Website</h1>
 			<p>(that grammar is correct, so don't say it isn't)</p>
 			<br>
+			<div class="inTheWorksNotice">It's safe to assume anything on this site is a WIP!</div>
 			<br>
 			<h1>About Me</h1>
 			<p>Hi, I'm MandyIGuess! You can call me Mandy for short though.<br>I'm a 14yrs old <em>male</em> living in the USA! My gender pronouns are He/Him/His.<br>My timezone is UTC-4 (better known as "the time that NYC uses"), and I'm usually active from 3PM to 12AM on week days, and from 8AM to 2AM on weekends!<br>If you want to find out more about me, go <a href="aboutme">here</a>!</p>
