--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
          font-family: nsmbu-font
       	}
 				div.inTheWorksNotice {
-					width: 1200px;
+					width: 100%;
         	height: 24px;
         	text-align: center;
-        	border: 5px double red;
-        	background-color: #ff0000;
+        	border: 5px single red;
+        	background-color: #de0000;
         	font-family: ebrima;
 				}
 		</style>
@@ -34,7 +34,7 @@
 			<h1>MandyIGuess' Website</h1>
 			<p>(that grammar is correct, so don't say it isn't)</p>
 			<br>
-			<div class="inTheWorksNotice">It's safe to assume anything on this site is a WIP!</div>
+			<div class="inTheWorksNotice"><b>It's safe to assume anything on this site is a WIP!</b></div>
 			<br>
 			<h1>About Me</h1>
 			<p>Hi, I'm MandyIGuess! You can call me Mandy for short though.<br>I'm a 14yrs old <em>male</em> living in the USA! My gender pronouns are He/Him/His.<br>My timezone is UTC-4 (better known as "the time that NYC uses"), and I'm usually active from 3PM to 12AM on week days, and from 8AM to 2AM on weekends!<br>If you want to find out more about me, go <a href="aboutme">here</a>!</p>
