--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
          font-family: nsmbu-font
       	}
 				div.inTheWorksNotice {
-					width: 100%;
+					width: 250px;
         	height: 24px;
         	text-align: center;
-        	border: 5px single red;
+        	border: 5px solid red;
         	background-color: #de0000;
         	font-family: ebrima;
 				}
