--- a/misc/how-to-get-girls.html
+++ b/misc/how-to-get-girls.html
@@ -26,7 +26,7 @@
 		</style>
 	  <meta content="How to Get Girls -- MandyIGuess' Website" property="og:title" />
 		<meta content="Ever want to get a girlfriend? This page tells you exactly how to, sporting a bright-colorful palette of colors to inspire you and let you make the best of this page!" property="og:description" />
-		<meta content="https://mandyiguess.github.io/spooky" property="og:url" />
+		<meta content="https://mandyiguess.github.io/misc/how-to-get-girls.html" property="og:url" />
 		<!--<meta content="https://embed.com/embedimage.png" property="og:image" />-->
 		<meta content="#dd8fda" data-react-helmet="true" name="theme-color" />
 		<title>How to Get Girls™</title>
@@ -34,7 +34,7 @@
 	</head>
 	<body>
 		<center>
-      <div class="title-window"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><img src="../img/load-anim.gif">
+			<div class="title-window"><br><br><br><br><br><br><p>Want to give feedback? Do so below~</p><br><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc737e-ktjXugJUAIpfmJXcFSyafD6kv08RDg-22NJBnJMqiQ/viewform?embedded=true" width="640" height="660" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><img src="../img/load-anim.gif">
 	      <br><br>Now loading content.<br>Please do not close the page during loading.
 			</div>
     </center>
