--- a/misc/how-to-get-girls.html
+++ b/misc/how-to-get-girls.html
@@ -34,10 +34,10 @@
 	</head>
 	<body>
 		<center>
-			<div class="title-window"><br><br><br><br><br><br><p>Want to give feedback? Do so below~</p><br><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc737e-ktjXugJUAIpfmJXcFSyafD6kv08RDg-22NJBnJMqiQ/viewform?embedded=true" width="640" height="660" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><img src="../img/load-anim.gif">
+			<div class="title-window"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><p><a href="https://forms.gle/BDME67GXZJqs586s5">Having issues? Submit feedback here:</a></p><br><img src="../img/load-anim.gif">
 	      <br><br>Now loading content.<br>Please do not close the page during loading.
 			</div>
     </center>
   </body>
 </html>
-<!--if you're reading this, fuck you.-->
+<!--if you're reading this, hi <3.-->
