--- a/misc/how-to-get-girls.html
+++ b/misc/how-to-get-girls.html
@@ -23,6 +23,16 @@
   			-ms-user-select: none; /* IE 10 and IE 11 */
   			user-select: none; /* Standard syntax */
       }
+			a {
+    		color: #ababab;
+    		text-decoration: none;
+			}
+
+			a:hover {
+    		color:#898989; 
+    		text-decoration:none; 
+    		cursor:pointer;  
+			}
 		</style>
 	  <meta content="How to Get Girls -- MandyIGuess' Website" property="og:title" />
 		<meta content="Ever want to get a girlfriend? This page tells you exactly how to, sporting a bright-colorful palette of colors to inspire you and let you make the best of this page!" property="og:description" />
@@ -35,7 +45,7 @@
 	<body>
 		<center>
 			<div class="title-window"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><p><a href="https://forms.gle/BDME67GXZJqs586s5">Having issues? Submit feedback here:</a></p><br><img src="../img/load-anim.gif">
-	      <br><br>Now loading content.<br>Please do not close the page during loading.
+	      <br><br>Now loading content.<br>Please do not close the page during the loading process.
 			</div>
     </center>
   </body>
