--- a/misc/how-to-get-girls.html
+++ b/misc/how-to-get-girls.html
@@ -44,7 +44,7 @@
 	</head>
 	<body>
 		<center>
-			<div class="title-window"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><p><a href="https://forms.gle/BDME67GXZJqs586s5">Having issues? Submit feedback here:</a></p><br><img src="../img/load-anim.gif">
+			<div class="title-window"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><p><b><a href="https://forms.gle/BDME67GXZJqs586s5">Having issues? Submit feedback here:</a></b></p><br><img src="../img/load-anim.gif">
 	      <br><br>Now loading content.<br>Please do not close the page during the loading process.
 			</div>
     </center>
