--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 				}
 		</style>
 		<title>MandyIGuess' Website</title>
+		<meta content="MandyIGuess' Website | Home" property="og:title" />
+		<meta content="Wanna quickly learn why you don't give a person like me HTML knowledge? Here's a large example!!!" property="og:description" />
+		<meta content="https://mandyiguess.github.io" property="og:url" />
+		<!--<meta content="https://embed.com/embedimage.png" property="og:image" />-->
+		<meta content="#fc0384" data-react-helmet="true" name="theme-color" />
 		<link rel="stylesheet" href="../css/main.css">
 	</head>
 	<body>
