Home page overhaul :eyes:

--- a/index.html
+++ b/index.html
@@ -2,62 +2,179 @@
 <html>
 	<head>
 		<style>
-      	@font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); } 
-				@font-face { font-family: corbel; src: url('CORBEL.TTF'); }
-				@font-face { font-family: ebrima; src: url('ebrima.ttf'); } 
-				h1 {
-         font-family: corbel
-      	}
-				p {
-         font-family: ebrima
-      	}
-      	h2 {
-         font-family: corbel
-      	}
-				a.nsmbwii {
-         font-family: nsmbu-font
-      	}
-				div.inTheWorksNotice {
-					width: 500px;
-        	height: 24px;
-        	text-align: center;
-        	border: 5px solid red;
-        	background-color: #de0000;
-        	font-family: ebrima;
-				}
+			@font-face { font-family: nsmbu-font; src: url('nsmbu-font.ttf'); } 
+			@font-face { font-family: corbel; src: url('CORBEL.TTF'); }
+			@font-face { font-family: ebrima; src: url('ebrima.ttf'); } 
+			h1 {
+				font-family: corbel;
+			}
+			p {
+				font-family: ebrima;
+			}
+			h2 {
+				font-family: corbel;
+			}
+			a.nsmbwii {
+				font-family: nsmbu-font;
+			}
+			body {
+				background-image: linear-gradient(red, #ff00ff);
+    			background-size: cover;
+    			background-repeat: no-repeat;
+			}
+			div.inTheWorksNotice {
+				width: 500px;
+				height: 24px;
+				text-align: center;
+				border: 5px solid red;
+				background-color: #de0000;
+				font-family: ebrima;
+			}
+			div.titleAndGrammarReassurance {
+				margin: auto;
+				width: 900px;
+				height: 100px;
+				background-color: #11113375;
+				box-shadow: 10px 10px 5px #00002250;
+			}
+			div.aboutMe {
+				text-align: center;
+				margin: auto;
+				width: 800px;
+				height: 180px;
+				background-color: #11113375;
+				box-shadow: 10px 10px 5px #00002250;
+				font-family: ebrima;
+			}
+			div.aboutWebsite {
+				text-align: center;
+				margin: auto;
+				width: 800px;
+				height: 290px;
+				background-color: #11113375;
+				box-shadow: 10px 10px 5px #00002250;
+				font-family: ebrima;
+			}
+			div.sectionHeader {
+				text-align: center;
+				margin: auto;
+				width: 900px;
+				height: 50px;
+				background-color: #11113375;
+				box-shadow: 10px 10px 5px #00002250;
+				font-family: ebrima;
+			}
+			div.projectsModding {
+				text-align: center;
+				margin: auto;
+				width: 800px;
+				height: 100px;
+				background-color: #11113375;
+				box-shadow: 10px 10px 5px #00002250;
+				font-family: ebrima;
+			}
+			div.projectsWebsite {
+				text-align: center;
+				margin: auto;
+				width: 800px;
+				height: 120px;
+				background-color: #11113375;
+				box-shadow: 10px 10px 5px #00002250;
+				font-family: ebrima;
+			}
+			div.junkDrawer {
+				text-align: center;
+				margin: auto;
+				width: 800px;
+				height: 180px;
+				background-color: #11113375;
+				box-shadow: 10px 10px 5px #00002250;
+				font-family: ebrima;
+			}
+			div.footer {
+				text-align: center;
+				margin: auto;
+				width: 900px;
+				height: 50px;
+				background-color: #11113375;
+				box-shadow: 10px 10px 5px #00002250;
+				font-family: ebrima;
+			}
 		</style>
 		<title>MandyIGuess' Website</title>
 		<meta content="MandyIGuess' Website | Home" property="og:title" />
-		<meta content="Wanna quickly learn why you don't give a person like me HTML knowledge? Here's a large example!!!" property="og:description" />
+		<meta content="Wanna quickly learn why you don't give a person like me HTML knowledge? Here's a great example!!!" property="og:description" />
 		<meta content="https://mandyiguess.github.io" property="og:url" />
-		<!--<meta content="https://embed.com/embedimage.png" property="og:image" />-->
 		<meta content="#fc0384" data-react-helmet="true" name="theme-color" />
 		<link rel="stylesheet" href="../css/main.css">
 	</head>
 	<body>
 		<center>
-			<h1>MandyIGuess' Website</h1>
-			<p>(that grammar is correct, so don't say it isn't)</p>
-			<br>
-			<div class="inTheWorksNotice"><b>It's safe to assume anything on this site is a WIP!</b></div>
-			<br>
-			<h1>About Me</h1>
-			<p>Hi, I'm MandyIGuess! You can call me Mandy for short though.<br>I'm a 14yrs old <em>male</em> living in the USA! My gender pronouns are He/Him/His.<br>My timezone is UTC-4 (better known as "the time that NYC uses"), and I'm usually active from 3PM to 12AM on week days, and from 8AM to 2AM on weekends!<br>If you want to find out more about me, go <a href="aboutme">here</a>!</p>
+			<div class="titleAndGrammarReassurance">
+				<h1>MandyIGuess' Website</h1>
+				<p>(that grammar is correct, so don't say it isn't)</p>
+			</div>
 			<br>
 			<br>
-			<h1>Explore this Website</h1>
-			<a href="about.html">About this Website</a>
+			<div class="inTheWorksNotice">
+				<b>It's safe to assume anything on this site is a WIP!</b>
+			</div>
 			<br>
 			<br>
-			<h1>My Projects</h1>
-			<h2>Modding</h2>
-			<a class="nsmbwii" href="../nsmbwii">NEW Super Mario Bros. Wii Modding Projects</a>
+			<div class="aboutMe">
+				<h1>About Me</h1>
+				<p>Hi, I'm MandyIGuess! You can call me Mandy for short though.<br>I'm a 14yrs old <em>male</em> living in the USA! My gender pronouns are He/Him/His.<br>My timezone is UTC-4 (better known as "the time that NYC uses"), and I'm usually active from 3PM to 12AM on week days (also occasionally 6-7AM; 11AM), and from 11AM to 2AM on weekends!<br>If you want to find out more about me, go <a href="aboutme">here</a>!</p>
+			</div>
 			<br>
 			<br>
+			<div class="aboutWebsite">
+				<h1>Explore this Website</h1>
+				<b><a href="about.html">About this Website</a></b>
+				<br>
+				<br>
+				[WORK-IN-PROGRESS]
+				<b><p href="siteHistory">History of this Website</p></b>
+				[COMING SOON...]
+				<b><p href="siteDirectory">Site Directory Map</p></b>
+				[COMING SOON...]
+				<br>
+			</div>
 			<br>
 			<br>
-			<h1><a href="../junkdrawer">My Junk Drawer</a></h1>
-			<p>This is my 'junk drawer', a collection of random crap and other miscellaneous things I don't want, and I <em>hope</em> you don't want either. What will mostly be here is my old NSMBW modding assets, like my 'remakes' of classic Mario games, and other levels I will never get to finishing. Feel free to sift through it, and take what you want I guess...</p>
+			<div class="sectionHeader">
+				<h1>My Projects</h1>
+			</div>
+			<br>
+			<div class="projectsModding">
+				<h1>Video Game Modding</h1>
+				<b>This section is a work-in-progress, please stay tuned!</b>
+			</div>
+			<br>
+			<br>
+			<div class="projectsWebsite">
+				<h1>This Website</h1>
+				<p>This website is being made using GitHub Pages, that's why it's <i>mandyiguess.<b>github</b>.com</i>!
+				<br>
+				You can find the GitHub Repository <a href="https://github.com/MandyIGuess/MandyIGuess.github.io"><b>here</b></a>.</p>
+			</div>
+			<br>
+			<br>
+			<div class="sectionHeader">
+				<h1>Miscellaneous</h1>
+			</div>
+			<div class="junkDrawer">
+				<h1>My Junkdrawer</h1>
+				<p>This is my 'junk drawer', a collection of random crap I don't want, and I <em>hope</em> you don't want either.<br>What will mostly be here is my old NSMBW modding assets, like my 'remakes' of classic Mario games, and other levels I will never get to finishing. Feel free to sift through it, and take what you want I guess...</p>
+				<a href="../junkdrawer">Go to the Junkdrawer</a>
+			</div>
+			<br>
+			<br>
+			<div class="footer">
+				<p><b>Copyright 2022-2023 MandyIGuess
+				<br>
+				Site created by MandyIGuess, with suggestions & feedback from others</b></p>
+			</div>
+			<br>
 		</center>
 	</body>
 </html>
