--- a/404.html
+++ b/404.html
@@ -5,19 +5,69 @@
 			@font-face { font-family: corbel; src: url('CORBEL.TTF'); }
 			@font-face { font-family: ebrima; src: url('ebrima.ttf'); } 
 			h1 {
-         font-family: corbel
-      }
+				font-family: corbel;
+			}
 			p {
-         font-family: ebrima
-      }
+				font-family: ebrima;
+			}
+			body {
+				background-image: linear-gradient(red, #ff00ff);
+				background-size: cover;
+				background-repeat: no-repeat;
+			}
+			div.title {
+				text-align: center;
+				margin: auto;
+				width: 900px;
+				height: 100px;
+				background-color: #11113375;
+				box-shadow: 10px 10px 5px #00002250;
+				font-family: ebrima;
+			}
+			div.infoBox {
+				text-align: center;
+				margin: auto;
+				width: 900px;
+				height: 120px;
+				background-color: #11113375;
+				box-shadow: 10px 10px 5px #00002250;
+				font-family: ebrima;
+			}
+			div.nonSelectBR {
+				-webkit-user-select: none; /* Safari */
+				-ms-user-select: none; /* IE 10 and IE 11 */
+				user-select: none; /* Standard syntax */
+			}
 		</style>
-		<title>404 Page-Not-Found</title>
+		<title>404 Error | Mandy's Website</title>
 		<link rel="stylesheet" href="../css/404notfound.css">
 	</head>
 	<body>
 		<center>
-			<h1 style="color:#550000">An error occured:<br>404 'Page Not Found'</h1>
-			<p>Sorry, couldn't find that. <br> The portion of this site (<em>mandyiguess.github.io</em>) that you've looked for could not be found. Try retyping the URL, or ensure it actually exists. <br><br> <a href="../">Return Home</a></p>
+			<div class="title">
+				<h1 style="color:#550000">An error occured:<br>404 - Page Not Found</h1>
+			</div>
+			<br>
+			<div class="infoBox">
+				<p>Sorry, couldn't find that page :c <br> The portion of this site (<em>mandyiguess.github.io</em>) that you've looked for could not be found.<br>Try retyping the URL, or make sure it actually exists. <br><br> <a href="../">Return Home</a></p>
+			</div>
+			<div class="nonSelectBR">
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+			</div>
 		</center>
 	</body>
 </html>
