Updated HTGG Page

--- a/misc/how-to-get-girls.html
+++ b/misc/how-to-get-girls.html
@@ -1,53 +1,22 @@
 <DOCTYPE html>
 <html>
   <head>
-    <style>
-			@font-face { font-family: corbel; src: url('CORBEL.TTF'); } 
-	    @font-face { font-family: ebrima; src: url('ebrima.ttf'); } 
-      h1 {
-        font-family: corbel
-      }
-      h2 {
-      	font-family: corbel
-      }
-			p {
-        font-family: ebrima
-      }
-      body {
-        background-color: black;
-      }
-			div.title-window {
-        font-family: ebrima;
-        color: gray;
-				-webkit-user-select: none; /* Safari */
-  			-ms-user-select: none; /* IE 10 and IE 11 */
-  			user-select: none; /* Standard syntax */
-      }
-			a {
-    		color: #ababab;
-    		text-decoration: none;
-			}
-
-			a:hover {
-    		color:#898989; 
-    		text-decoration:none; 
-    		cursor:pointer;  
-			}
-		</style>
 	  <meta content="How to Get Girls -- MandyIGuess' Website" property="og:title" />
 		<meta content="Ever want to get a girlfriend? This page tells you exactly how to, sporting a bright-colorful palette of colors to inspire you and let you make the best of this page!" property="og:description" />
 		<meta content="https://mandyiguess.github.io/misc/how-to-get-girls.html" property="og:url" />
-		<!--<meta content="https://embed.com/embedimage.png" property="og:image" />-->
 		<meta content="#dd8fda" data-react-helmet="true" name="theme-color" />
-		<title>How to Get Girls™</title>
-		<link rel="stylesheet" href="../css/main.css">
+		<title>How to Get Girls</title>
+		<link rel="stylesheet" href="../css/howToGetGirls.css">
 	</head>
 	<body>
-		<center>
-			<div class="title-window"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><p><b><a href="https://forms.gle/BDME67GXZJqs586s5">Having issues? Submit feedback here:</a></b></p><br><img src="../img/load-anim.gif">
-	      <br><br>Now loading content.<br>Please do not close the page during the loading process.
-			</div>
-    </center>
-  </body>
+		err//515\.execute\742617000027\<br>?
+		<div class="padding"></div>
+		<div class="titleWindow">
+			<img src="../img/load-anim.gif">
+			<br>
+			<br>
+	        Now loading content.<br>Please do not close the page during the loading process.
+		</div>
+	</body>
 </html>
-<!--if you're reading this, hi <3.-->
+<!--if you're reading this, hi <3-->
