Fix something stupid (it worked fine in Chrome :l)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta content="A homepage, if you don't like colors, sorry but you won't want to go here." property="og:description" />
 		<meta content="https://mandyiguess.github.io" property="og:url" />
 		<meta content="#fc0384" data-react-helmet="true" name="theme-color" />
-		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="../css/main.css">
 	</head>
 	<body>
 		<div class="titleAndGrammarReassurance">
@@ -17,7 +17,7 @@
 		<br>
 		<div class="newStuffSection">
 			<h1><b>BRAND NEW!</b></h1>
-			<p>A blog section has launched! Check it out <a href="blog/index.html"><b>here</b></a>!</p>
+			<p>A blog section has launched! Check it out <a href="../blog/index.html"><b>here</b></a>!</p>
 		</div>
 		<br>
 		<br>
